k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-dev
  labels:
    app.kubernetes.io/name: nest-redis-demo
    app.kubernetes.io/environment: dev
