k8s/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-app
  namespace: app-dev
  labels:
    app.kubernetes.io/name: nestjs-app
    app.kubernetes.io/part-of: nest-redis-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nestjs-app
  template:
    metadata:
      labels:
        app: nestjs-app
      annotations:
# Якщо у вас Prometheus Operator
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics" # зробіть /metrics у додатку, або приберіть цю анотацію
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
        - name: api
          image: "rybalko2001/nest-redis-demo"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /redis
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /redis
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      terminationGracePeriodSeconds: 30
