k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-app
  namespace: app-dev
  labels:
    app.kubernetes.io/name: nestjs-app
spec:
  type: ClusterIP
  selector:
    app: nestjs-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
