k8s/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: app-dev
  labels:
    app.kubernetes.io/name: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
