k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-redis-only
  namespace: app-dev
spec:
  podSelector:
    matchLabels:
    app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: nestjs-app
      ports:
        - protocol: TCP
          port: 6379
